# infrastack

./: .gitignore  error_detection_agent.py  infra.py  mock_log.json  mock_metric.json  mock_trace.json  requirements.txt  workflow.py
data/: logs.json  mock.py
db/: chroma.sqlite3
infra_project/: README.md  pyproject.toml
infra_project/src/infra_project/: crew.py  main.py
src/: main.py  workflow.py
src/agents/: context_analyzer.py  error_detector.py  sre_engineer.py
src/tests/: test_context_analyzer.py  test_error_detector.py  test_minimal.py
src/tools/: json_search_tool.py  rag_crew.py  rag_tool.py
