[tool.poetry]
name = "infra_project"
version = "0.1.0"
description = "infra_project using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }


[tool.poetry.scripts]
infra_project = "infra_project.main:run"
run_crew = "infra_project.main:run"
train = "infra_project.main:train"
replay = "infra_project.main:replay"
test = "infra_project.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
